--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="hero__dog-mob">
               <img src="images/hero-bg.png" alt="RACCO Image">
             </div>
-            <a target="_blank" href="https://firstledger.net/tokens" class="hero__button">Buy here</a>
+            <a target="_blank"
+              href="https://firstledger.net/token/r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9/524143434F000000000000000000000000000000"
+              class="hero__button">Buy here</a>
             <div class="hero__title-mob">
               <img src="images/logo.png" alt="Title Image">
             </div>
@@ -201,7 +203,9 @@
             <a target="_blank" href="https://dexscreener.com/" class="partners__item">
               <img src="images/01.png" alt="Logo">
             </a>
-            <a target="_blank" href="" class="partners__item">
+            <a target="_blank"
+              href="https://firstledger.net/token/r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9/524143434F000000000000000000000000000000"
+              class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
             </a>
 
