--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </div>
               <div class="content-address__address">
                 <span>Contract Address: </span>
-                <span>SOON
+                <span>524143434F000000000000000000000000000000.r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9
                 </span>
                 <button type="button" class="btn-address">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
