--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>$RACCO ON XRPL</title>
+  <title>$RACCO ON PULSE</title>
   <meta charset="UTF-8">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
@@ -41,20 +41,20 @@
               <img src="images/hero-bg.png" alt="RACCO Image">
             </div>
             <a target="_blank"
-              href="https://firstledger.net/token/r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9/524143434F000000000000000000000000000000"
+              href="https://pump.tires/"
               class="hero__button">Buy here</a>
             <div class="hero__title-mob">
               <img src="images/logo.png" alt="Title Image">
             </div>
             <div class="hero__social">
-              <a target="_blank" href="https://x.com/Racco_XRPL" class="hero__social-item">
+              <a target="_blank" href="https://x.com/Racco_PULSE" class="hero__social-item">
                 <img src="images/twitter.png" alt="Twitter Icon">
               </a>
-              <a target="_blank" href="https://t.me/RaccoXRPL_Portal" class="hero__social-item">
+              <a target="_blank" href="https://t.me/RaccoPULSE_Portal" class="hero__social-item">
                 <img src="images/telegram.png" alt="Telegram Icon">
               </a>
               <a target="_blank" href="" class="hero__social-item">
-                <img src="images/XRP 3D.png" alt="Xrp icon"></a>
+                <img src="images/PULSE 3D.png" alt="Xrp icon"></a>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
               </div>
               <div class="content-address__address">
                 <span>Contract Address: </span>
-                <span>524143434F000000000000000000000000000000.r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9
+                <span>TBA
                 </span>
                 <button type="button" class="btn-address">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -204,7 +204,7 @@
               <img src="images/01.png" alt="Logo">
             </a>
             <a target="_blank"
-              href="https://firstledger.net/token/r99rQJkj3Q3oQiHPrhM5fRibwCNeiSqAG9/524143434F000000000000000000000000000000"
+              href="https://pump.tires/"
               class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
             </a>
@@ -230,8 +230,8 @@
                 <div class="item-how__content">
                   <h3 class="item-how__title">Create a Wallet</h3>
                   <div class="item-how__text">
-                    Visit <a href="https://firstledger.net/" target="_blank"
-                      rel="noopener noreferrer">https://firstledger.net/</a> and create a wallet.
+                    
+                      Create a metamask wallet.
                   </div>
                 </div>
               </div>
@@ -240,9 +240,9 @@
                   <img src="fonts/02.svg" alt="Icon">
                 </div>
                 <div class="item-how__content">
-                  <h3 class="item-how__title">Get some XRP</h3>
+                  <h3 class="item-how__title">Get some PLS</h3>
                   <div class="item-how__text">
-                    You need XRP in your wallet to switch to $RACCO You can buy XRP from an exchange or cross chain swap
+                    You need PLS in your wallet to switch to $RACCO You can buy PLS from an exchange or cross chain swap
                     and send it to your wallet.
                   </div>
                 </div>
@@ -254,8 +254,8 @@
                 <div class="item-how__content">
                   <h3 class="item-how__title">SWAP</h3>
                   <div class="item-how__text">
-                    Go <a href="https://firstledger.net/" target="_blank"
-                      rel="noopener noreferrer">https://firstledger.net/</a>. Connect your
+                    Go <a href="https://pump.tires/" target="_blank"
+                      rel="noopener noreferrer">https://pump.tires/</a>. Connect your
                     wallet.
                   </div>
                 </div>
@@ -265,10 +265,10 @@
                   <img src="fonts/04.svg" alt="Icon">
                 </div>
                 <div class="item-how__content">
-                  <h3 class="item-how__title">Switch XRP for $RACCO</h3>
+                  <h3 class="item-how__title">Switch PLS for $RACCO</h3>
                   <div class="item-how__text">
-                    When First Ledger prompts you for a wallet
-                    signature, sign. Swap XRP for $RACCO
+                    When the transaction prompts you for a wallet
+                    signature, sign. Swap PLS for $RACCO
                   </div>
                 </div>
               </div>
@@ -400,7 +400,7 @@
                       stroke="black" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" />
                   </svg>
                 </div>
-                <div class="supply__main-content-value">100,000,000</div>
+                <div class="supply__main-content-value">XXX,000,000</div>
               </div>
             </div>
             <div data-watch-threshold="1" data-watch-once data-watch class="supply__bottom counters">
@@ -529,8 +529,8 @@
                 <a href="#" data-goto=".tokenomics" class="footer__content-menu-item">TOKENOMICS</a>
               </div>
               <div class="footer__content-menu-column">
-                <a target="_blank" href="https://t.me/RaccoXRPL_Portal" class="footer__content-menu-item">Telegram</a>
-                <a target="_blank" href="https://x.com/Racco_XRPL" class="footer__content-menu-item">Twitter
+                <a target="_blank" href="https://t.me/RaccoPULSE_Portal" class="footer__content-menu-item">Telegram</a>
+                <a target="_blank" href="https://x.com/Racco_PULSE" class="footer__content-menu-item">Twitter
                   <span>X</span></a>
 
               </div>
