--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <img src="images/telegram.png" alt="Telegram Icon">
               </a>
               <a target="_blank" href="" class="hero__social-item">
-                <img src="images/PULSE 3D.png" alt="Xrp icon"></a>
+                <img src="images/pump.png" alt="Xrp icon"></a>
             </div>
           </div>
         </div>
@@ -203,11 +203,11 @@
             <a target="_blank" href="https://dexscreener.com/" class="partners__item">
               <img src="images/01.png" alt="Logo">
             </a>
-            <a target="_blank"
+            <!-- <a target="_blank"
               href="https://pump.tires/"
               class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
-            </a>
+            </a> -->
 
 
           </div>
