--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
               <img src="images/hero-bg.png" alt="RACCO Image">
             </div>
             <a target="_blank"
-              href="https://pump.tires/"
+              href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2"
               class="hero__button">Buy here</a>
             <div class="hero__title-mob">
               <img src="images/logo.png" alt="Title Image">
             </div>
             <div class="hero__social">
-              <a target="_blank" href="https://x.com/Racco_PULSE" class="hero__social-item">
+              <a target="_blank" href="https://x.com/Racco_Pulse" class="hero__social-item">
                 <img src="images/twitter.png" alt="Twitter Icon">
               </a>
-              <a target="_blank" href="https://t.me/RaccoPULSE_Portal" class="hero__social-item">
+              <a target="_blank" href="https://t.me/RaccoPulse_Portal" class="hero__social-item">
                 <img src="images/telegram.png" alt="Telegram Icon">
               </a>
               <a target="_blank" href="" class="hero__social-item">
@@ -176,7 +176,7 @@
               </div>
               <div class="content-address__address">
                 <span>Contract Address: </span>
-                <span>TBA
+                <span>0xc8b25ee1317af069DAB30a3475746634b07f27e2
                 </span>
                 <button type="button" class="btn-address">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -204,7 +204,7 @@
               <img src="images/01.png" alt="Logo">
             </a>
             <!-- <a target="_blank"
-              href="https://pump.tires/"
+              href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2"
               class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
             </a> -->
@@ -254,8 +254,8 @@
                 <div class="item-how__content">
                   <h3 class="item-how__title">SWAP</h3>
                   <div class="item-how__text">
-                    Go <a href="https://pump.tires/" target="_blank"
-                      rel="noopener noreferrer">https://pump.tires/</a>. Connect your
+                    Go <a href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2" target="_blank"
+                      rel="noopener noreferrer">https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2</a>. Connect your
                     wallet.
                   </div>
                 </div>
@@ -529,8 +529,8 @@
                 <a href="#" data-goto=".tokenomics" class="footer__content-menu-item">TOKENOMICS</a>
               </div>
               <div class="footer__content-menu-column">
-                <a target="_blank" href="https://t.me/RaccoPULSE_Portal" class="footer__content-menu-item">Telegram</a>
-                <a target="_blank" href="https://x.com/Racco_PULSE" class="footer__content-menu-item">Twitter
+                <a target="_blank" href="https://t.me/RaccoPulse_Portal" class="footer__content-menu-item">Telegram</a>
+                <a target="_blank" href="https://x.com/Racco_Pulse" class="footer__content-menu-item">Twitter
                   <span>X</span></a>
 
               </div>
