--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-  <title>$RACCO ON PULSE</title>
+  <title>$RACCO ON STORY</title>
   <meta charset="UTF-8">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="shortcut icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="the panda - The ultimate community-driven token on the Xrp blockchain.">
-  <meta name="keywords" content="RACCO, panda, Xrp, token, cryptocurrency, blockchain">
+  <meta name="description" content="the panda - The ultimate community-driven token on the Story blockchain.">
+  <meta name="keywords" content="RACCO, panda, Story, token, cryptocurrency, blockchain">
   <meta name="author" content="RACCO Team">
 </head>
 
@@ -41,20 +41,20 @@
               <img src="images/hero-bg.png" alt="RACCO Image">
             </div>
             <a target="_blank"
-              href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2"
+              href="https://ip.world/"
               class="hero__button">Buy here</a>
             <div class="hero__title-mob">
               <img src="images/logo.png" alt="Title Image">
             </div>
             <div class="hero__social">
-              <a target="_blank" href="https://x.com/Racco_Pulse" class="hero__social-item">
+              <a target="_blank" href="https://x.com/Racco_STORY" class="hero__social-item">
                 <img src="images/twitter.png" alt="Twitter Icon">
               </a>
-              <a target="_blank" href="https://t.me/RaccoPulse_Portal" class="hero__social-item">
+              <a target="_blank" href="https://t.me/RaccoSTORY_Portal" class="hero__social-item">
                 <img src="images/telegram.png" alt="Telegram Icon">
               </a>
               <a target="_blank" href="" class="hero__social-item">
-                <img src="images/pump.png" alt="Xrp icon"></a>
+                <img src="images/logo.svg" alt="Story icon"></a>
             </div>
           </div>
         </div>
@@ -171,12 +171,12 @@
                 RACCO <span> the panda</span>
               </h2>
               <div class="content-address__text">
-                We are the ultimate community-driven the panda token on the Xrp blockchain. There is no second best.
+                We are the ultimate community-driven the panda token on the Story blockchain. There is no second best.
                 Memes, utility, and thiqq liquidity.
               </div>
               <div class="content-address__address">
                 <span>Contract Address: </span>
-                <span>0xc8b25ee1317af069DAB30a3475746634b07f27e2
+                <span>SOON
                 </span>
                 <button type="button" class="btn-address">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -204,7 +204,7 @@
               <img src="images/01.png" alt="Logo">
             </a>
             <!-- <a target="_blank"
-              href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2"
+              href="https://ip.world/"
               class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
             </a> -->
@@ -240,9 +240,9 @@
                   <img src="fonts/02.svg" alt="Icon">
                 </div>
                 <div class="item-how__content">
-                  <h3 class="item-how__title">Get some PLS</h3>
+                  <h3 class="item-how__title">Get some IP</h3>
                   <div class="item-how__text">
-                    You need PLS in your wallet to switch to $RACCO You can buy PLS from an exchange or cross chain swap
+                    You need IP in your wallet to switch to $RACCO You can buy IP from an exchange or cross chain swap
                     and send it to your wallet.
                   </div>
                 </div>
@@ -254,8 +254,8 @@
                 <div class="item-how__content">
                   <h3 class="item-how__title">SWAP</h3>
                   <div class="item-how__text">
-                    Go <a href="https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2" target="_blank"
-                      rel="noopener noreferrer">https://pump.tires/token/0xc8b25ee1317af069DAB30a3475746634b07f27e2</a>. Connect your
+                    Go <a href="https://ip.world/" target="_blank"
+                      rel="noopener noreferrer">https://ip.world/</a>. Connect your
                     wallet.
                   </div>
                 </div>
@@ -265,10 +265,10 @@
                   <img src="fonts/04.svg" alt="Icon">
                 </div>
                 <div class="item-how__content">
-                  <h3 class="item-how__title">Switch PLS for $RACCO</h3>
+                  <h3 class="item-how__title">Switch IP for $RACCO</h3>
                   <div class="item-how__text">
                     When the transaction prompts you for a wallet
-                    signature, sign. Swap PLS for $RACCO
+                    signature, sign. Swap IP for $RACCO
                   </div>
                 </div>
               </div>
@@ -529,8 +529,8 @@
                 <a href="#" data-goto=".tokenomics" class="footer__content-menu-item">TOKENOMICS</a>
               </div>
               <div class="footer__content-menu-column">
-                <a target="_blank" href="https://t.me/RaccoPulse_Portal" class="footer__content-menu-item">Telegram</a>
-                <a target="_blank" href="https://x.com/Racco_Pulse" class="footer__content-menu-item">Twitter
+                <a target="_blank" href="https://t.me/RaccoSTORY_Portal" class="footer__content-menu-item">Telegram</a>
+                <a target="_blank" href="https://x.com/Racco_STORY" class="footer__content-menu-item">Twitter
                   <span>X</span></a>
 
               </div>
