--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               <img src="images/logo.png" alt="Title Image">
             </div>
             <div class="hero__social">
-              <a target="_blank" href="https://x.com/Racco_STORY" class="hero__social-item">
+              <a target="_blank" href="https://x.com/Racco_Story" class="hero__social-item">
                 <img src="images/twitter.png" alt="Twitter Icon">
               </a>
-              <a target="_blank" href="https://t.me/RaccoSTORY_Portal" class="hero__social-item">
+              <a target="_blank" href="https://t.me/RaccoStory_Channel" class="hero__social-item">
                 <img src="images/telegram.png" alt="Telegram Icon">
               </a>
               <a target="_blank" href="" class="hero__social-item">
@@ -529,8 +529,8 @@
                 <a href="#" data-goto=".tokenomics" class="footer__content-menu-item">TOKENOMICS</a>
               </div>
               <div class="footer__content-menu-column">
-                <a target="_blank" href="https://t.me/RaccoSTORY_Portal" class="footer__content-menu-item">Telegram</a>
-                <a target="_blank" href="https://x.com/Racco_STORY" class="footer__content-menu-item">Twitter
+                <a target="_blank" href="https://t.me/RaccoStory_Channel" class="footer__content-menu-item">Telegram</a>
+                <a target="_blank" href="https://x.com/Racco_Story" class="footer__content-menu-item">Twitter
                   <span>X</span></a>
 
               </div>
