--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <img src="images/hero-bg.png" alt="RACCO Image">
             </div>
             <a target="_blank"
-              href="https://ip.world/"
+              href="https://ip.world/token/0x4E607Fb3B1461ada4c7a14e1ff501Cdf15490DAe"
               class="hero__button">Buy here</a>
             <div class="hero__title-mob">
               <img src="images/logo.png" alt="Title Image">
@@ -176,7 +176,7 @@
               </div>
               <div class="content-address__address">
                 <span>Contract Address: </span>
-                <span>SOON
+                <span>0x4E607Fb3B1461ada4c7a14e1ff501Cdf15490DAe
                 </span>
                 <button type="button" class="btn-address">
                   <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -204,7 +204,7 @@
               <img src="images/01.png" alt="Logo">
             </a>
             <!-- <a target="_blank"
-              href="https://ip.world/"
+              href="https://ip.world/token/0x4E607Fb3B1461ada4c7a14e1ff501Cdf15490DAe"
               class="partners__item">
               <img style="" src="images/leger.jpg" alt="Logo">
             </a> -->
@@ -254,8 +254,8 @@
                 <div class="item-how__content">
                   <h3 class="item-how__title">SWAP</h3>
                   <div class="item-how__text">
-                    Go <a href="https://ip.world/" target="_blank"
-                      rel="noopener noreferrer">https://ip.world/</a>. Connect your
+                    Go <a href="https://ip.world/token/0x4E607Fb3B1461ada4c7a14e1ff501Cdf15490DAe" target="_blank"
+                      rel="noopener noreferrer">https://ip.world/token/0x4E607Fb3B1461ada4c7a14e1ff501Cdf15490DAe</a>. Connect your
                     wallet.
                   </div>
                 </div>
